k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sfmc-development-suite
  labels:
    name: sfmc-development-suite
    environment: production
